<resources>
    <string name="app_name">IB Express</string>
    <string name="front_name">IB EXPRESS</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_to_ib_express">Welcome to IB Express</string>
    <string name="poweredBy">Ibrahim Akram Mughal (Ciphers Corporation)</string>
    <string name="nextBtn">Next</string>
    <string name="login">Login</string>
    <string name="retailer_description">Here you can buy any thing with just one click</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="seller_shop_category">Category</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="shop_image">Shop Profile</string>
    <string name="click_here">Click Here</string>
    <string name="shop_document">Shop Document (Cash Memo)</string>
    <string name="shop_document_btn">Shop Document</string>
    <string name="shop_owner_id_front">Owner ID card front</string>
    <string name="shop_owner_id_back">Owner ID card back</string>
    <string name="shop_visiting_card">Visiting Card</string>
    <string name="shop_address">Shop Address</string>
    <string name="submit">Submit Data</string>
    <string name="shop_licence">Licence ( put 0 if you don\'t have )</string>
    <string name="seller_pending_status_txt">Thanks for your Patience. It takes ( 3-5 ) Business Days. Please visit on your provided email regularly.
        Our Staff will inform you when your account is approved. If we need any other document our Staff will inform you in your email.
        I hope you can understand our Privacy &amp; Policy. Thanks
    </string>
    <string name="approve_seller">Approve Seller</string>
    <string name="modification_request">Modification Request</string>
    <string name="disable_seller">Disable Seller</string>
    <string name="mail_title">Title</string>
    <string name="mail_body">Body</string>
    <string name="submit_your_response">Submit Response</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Please wait while we sent OTP code on this number. </string>
    <string name="verify">Verify</string>
    <string name="dummy_number">Dummy Number</string>
    <string name="resend_code">Resend Code</string>
    <string name="add_new_product">Add New Products</string>
    <string name="category_product_name">Enter Product Name</string>
    <string name="category_product_description">Enter Product Description</string>
    <string name="category_product_price">Enter Product Price</string>
    <string name="admin_menu_maintenance">Maintenance</string>
    <string name="admin_sellers">New Sellers</string>
    <string name="admin_sellers_request">Sellers Request</string>
    <string name="username">Username</string>
    <string name="fullName">Full Name</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="cv_item_description">Product description</string>
    <string name="settings_change_profile">Change Profile</string>
    <string name="change_password">Change Password</string>
    <string name="product_detail">Product Detail</string>
    <string name="product_detail_price">Price</string>
    <string name="cart_name">Manage Cart Items</string>
    <string name="total_price">Total Price : </string>
    <string name="total_quantity">Total Qty</string>
    <string name="total_price_number">0</string>
    <string name="shipping_detail">Shipping Detail</string>
    <string name="confirm_order">Confirm Your Order</string>
    <string name="sender_name">Enter the sender name</string>
    <string name="receiver_name">Enter the receiver name</string>
    <string name="sender_phone">Enter the sender phone no</string>
    <string name="receiver_phone">Enter the receiver phone no</string>
    <string name="shipping_from">Shipping city from</string>
    <string name="shipping_to">Shipping to this city</string>
    <string name="shipping_address">Shipping the address</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="new_orders">New Orders</string>
    <string name="admin_orders_user_name">User Name</string>
    <string name="admin_orders_phone_no">Phone No</string>
    <string name="admin_orders_price">Total Price</string>
    <string name="admin_orders_address">User Address</string>
    <string name="admin_orders_date">Date : </string>
    <string name="admin_orders_show_detail">Show Details </string>
    <string name="apply_changes">Apply Changes </string>
    <string name="add_new_categories">Add New Category </string>
    <string name="add_categories">Add Category </string>
    <string name="categories_name">Category Name</string>
    <string name="add_product_to_special_offer">Special Offers</string>
    <string name="add_product_to_collection">Deals</string>
    <string name="add_product_maintenance">Product Maintenance</string>
    <string name="add_new_admin">New Admin</string>
    <string name="admin_shipping_detail">Add Shipping Detail</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="admin_add_special_offers">Add Special Offers</string>
    <string name="admin_view_special_offers">View Special Offers</string>
    <string name="add_new_deal">Add New Deal</string>
    <string name="view_deal_products">View Deals Products</string>
    <string name="previous_page">Previous Page</string>
    <string name="special_offer_detail">Special Offer Product Detail</string>
    <string name="items_left">Items Left</string>
    <string name="modify_product">Modify Product</string>
    <string name="delivery_guy">Delivery Guy</string>
    <string name="address">Address</string>
    <string name="add_new_delivery_guy">Add New Delivery Guy</string>
    <string name="add_product_category">Add Product Category</string>
    <string name="product_category">View All Product Categories</string>
    <string name="add_shop_category">Add Shop Category</string>
    <string name="view_shop_category">View All Shop Category</string>
    <string name="assign_order_to_delivery_guy">Assign Order for Delivery</string>
    <string name="branch_code">00000</string>
    <string name="shipping_id">Shipping ID</string>
    <string name="tracking_id">Tracking ID</string>
    <string name="add_record">Add Record</string>
    <string name="set_current_location">Set Current Location</string>
    <string name="seller_level">Seller Level</string>
    <string name="receive_seller_order">Receive Sellers Orders</string>
    <string name="city_to_city">City to City Delivery</string>
    <string name="add_new_branch">Add New Branch</string>
    <string name="view_all_branch">View all Branches</string>
    <string name="branch_code_txt">Branch Code</string>
    <string name="branch_password_txt">Branch Password</string>
    <string name="branch_city_txt">Branch City</string>
    <string name="branch_phone_txt">Branch Phone</string>
    <string name="branch_address_txt">Branch Address</string>
    <string name="branch_email_txt">Branch Email</string>
    <string name="branch_dashboard">Branch Dashboard</string>
    <string name="send_from">Send From</string>
    <string name="send_to">Send To</string>
    <string name="zero">0</string>
    <string name="receive_other_branch_orders">Receive Other Branches Orders</string>
    <string name="other_branches_orders">Other Branches Orders</string>
    <string name="shipped_guy">Shipped Guy</string>
    <string name="branch_delivered_order">Branch Delivered Orders</string>
    <string name="complete_this_order">Complete this Order</string>
    <string name="download_pdf">Download Pdf</string>
    <string name="insert_challan_picture">Insert Bank Challan Picture</string>
    <string name="logout_from_this_branch">Logout From this Branch</string>
    <string name="cancel_order">Cancel this Order</string>
    <string name="buyer_username">Buyer Username</string>
    <string name="delivery_guy_username">Delivery Guy Username</string>
    <string name="return_to">Return to</string>
    <string name="return_from">Return from</string>
    <string name="branch_payments">Branch Payments</string>
    <string name="check">Check</string>
    <string name="mark_as_checked">Mark as Checked</string>
    <string name="seller_analytics">Seller Analytics</string>
    <string name="total_earning">Total Earning</string>
    <string name="available_balance">Available Balance</string>
    <string name="ratting">Ratting</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="active_orders">Active Orders</string>
    <string name="online_payments">Online Payments</string>
    <string name="jazz_cash">Jazz Cash</string>
    <string name="pay_with_jazz_cash">Pay with Jazz Cash</string>
    <string name="easy_paisa">Easypaisa</string>
    <string name="online_payment_desc">Now you can purchase any thing from our app. You can easily pay your online payments by using Jazz Cash
    &amp; Easy paisa. You can totally relay on this payments methods. You can safely pay your payments easily.</string>
    <string name="withdraw_balance">Withdraw Balance</string>
    <string name="forget_password">Forget Password.?</string>
    <string name="help_login">Help Login</string>
    <string name="trouble_login">Trouble Logging In?</string>
    <string name="seller_name">Seller Name</string>
    <string name="seller_username">Seller Username</string>
    <string name="seller_shop_name">Seller Shop Name</string>
    <string name="seller_shop_email">Seller Shop Email</string>
    <string name="seller_shop_phone_one">Seller Shop Phone 1</string>
    <string name="buyer_dashboard_nav">Home</string>
    <string name="buyer_search_nav">Search</string>
    <string name="buyer_profile_nav">Profile</string>
    <string name="buyer_notification_nav">Notification</string>
    <string name="seller_dashboards">Dashboard</string>
    <string name="seller_notification">Notifications</string>
    <string name="seller_messages">Messages</string>
    <string name="seller_profile">Profile</string>
    <string name="date">00-01-0001</string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="load_sub_categories">Load Sub Categories</string>
    <string name="sub_category_iv_desc">Please upload image only if it is a Third category</string>
    <string name="category_point_one">If Main Category then add Category text and press Add</string>
    <string name="category_point_two">If Sub Category select man category and add category text and press Add</string>
    <string name="category_point_three">If Third load second sub category and add category text and press Add</string>
    <string name="category_point_four">If shop category then add category text and press Add</string>
    <string name="account_number">Account Number</string>
    <string name="account_bank_name">Account Bank Name</string>
    <string name="payment_request">Payment Request</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="approve_payment_request">Approve Payment</string>
    <string name="decline_payment">Decline Payment</string>
    <string name="transaction_id">Transaction ID </string>
</resources>