<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin.AdminSellerPaymentDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/lightGrey"
        android:padding="10dp">

        <ImageView
            android:id="@+id/payment_detail_back_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/nunito_light"
            android:text="@string/payment_detail"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/transaction_id_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_id"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/nunito_light"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/seller_available_balance_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/available_balance"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seller_request_payment_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/payment_request"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seller_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/seller_shop_email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seller_username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/seller_username"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seller_account_no_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/account_number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seller_account_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/account_bank_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/seller_payment_date_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/nunito_light"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/approve_payment_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/approve_payment_request" />

        <Button
            android:id="@+id/decline_payment_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/decline_payment"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>