<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Admin.AdminAddNewCategory">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/add_new_category_page_back_icon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/baloo"
            android:text="@string/add_new_categories"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <ImageView
                android:id="@+id/category_image_insert_iv"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/insert_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_light"
                android:text="@string/sub_category_iv_desc"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_light"
                android:text="@string/category_point_one"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_light"
                android:text="@string/category_point_two"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_light"
                android:text="@string/category_point_three"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nunito_light"
                android:text="@string/category_point_four"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/spinner_border"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/choose_category_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="55dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_light"
                android:text="@string/main_category"
                android:textSize="17sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/admin_category_layout_border"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/choose_main_category_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="55dp" />

            </LinearLayout>

            <Button
                android:id="@+id/load_sub_category_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorAccent"
                android:text="@string/load_sub_categories"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/sub_category_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_light"
                android:text="@string/sub_category"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/sub_category_layout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/spinner_border"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/choose_sub_category_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="55dp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/admin_new_category_name_txt"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/categories_name"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="1dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_new_category_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/add_categories"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>